--- a/test-output/index.html
+++ b/test-output/index.html
@@ -167,7 +167,7 @@ Driver info: driver.version: AndroidDriver
 	at io.appium.java_client.AppiumDriver.&lt;init&gt;(AppiumDriver.java:86)
 	at io.appium.java_client.AppiumDriver.&lt;init&gt;(AppiumDriver.java:96)
 	at io.appium.java_client.android.AndroidDriver.&lt;init&gt;(AndroidDriver.java:94)
-	at pages.prl.tests.AndroidNativeWebAppParallelTests.setup(AndroidNativeWebAppParallelTests.java:57)
+	at pages.prl.tests.AndroidNativeWebAppParallelTests.setup(AndroidNativeWebAppParallelTests.java:60)
 	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
 	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
 	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
@@ -289,7 +289,7 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testFindOwner')
 data.setCell(0, 2, 'pages.prl.tests.AndroidNativeWebAppParallelTests')
-data.setCell(0, 3, 10256);
+data.setCell(0, 3, 54894);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testFindOwner')
 data.setCell(1, 2, 'pages.prl.tests.AndroidNativeWebAppParallelTests')
@@ -298,7 +298,7 @@ window.suiteTableData['WebAppSuite']= { tableData: data, tableDiv: 'times-div-We
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 47 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-WebAppSuite">
               </div> <!-- times-div-WebAppSuite -->
             </div> <!-- times-div -->
@@ -337,19 +337,19 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">testFindOwner</span>
-                <span class="method-start">13398 ms</span>
+                <span class="method-start">1181 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">13401 ms</span>
+                <span class="method-start">1184 ms</span>
               </div> <!-- configuration-test after -->
               <div class="test-method">
                 <span class="method-name">testFindOwner</span>
-                <span class="method-start">36299 ms</span>
+                <span class="method-start">17723 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">46559 ms</span>
+                <span class="method-start">72620 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
