--- a/test-output/old/AndroidNativeSuite/methods.html
+++ b/test-output/old/AndroidNativeSuite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AndroidNativeSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dd9bcd">  <td>19/11/27 16:24:56</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AndroidNativeParallelTests.setup(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@6e06451e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@844427175</td>   <td></td> </tr>
-<tr bgcolor="dd9bcd">  <td>19/11/27 16:24:56</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AndroidNativeParallelTests.setup(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@3327bd23]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@166581101</td>   <td></td> </tr>
-<tr bgcolor="dd9bcd">  <td>19/11/27 16:24:57</td>   <td>716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AndroidNativeParallelTests.testLoginAndLogout()[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@3327bd23]">testLoginAndLogout</td> 
-  <td>TestNG-tests-2@166581101</td>   <td></td> </tr>
-<tr bgcolor="dd9bcd">  <td>19/11/27 16:24:57</td>   <td>719</td> <td>&nbsp;</td><td title="&lt;&lt;AndroidNativeParallelTests.teardown()[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@3327bd23]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@166581101</td>   <td></td> </tr>
-<tr bgcolor="dd9bcd">  <td>19/11/27 16:25:01</td>   <td>5408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AndroidNativeParallelTests.testLoginAndLogout()[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@6e06451e]">testLoginAndLogout</td> 
-  <td>TestNG-tests-1@844427175</td>   <td></td> </tr>
-<tr bgcolor="dd9bcd">  <td>19/11/27 16:25:01</td>   <td>5409</td> <td>&nbsp;</td><td title="&lt;&lt;AndroidNativeParallelTests.teardown()[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@6e06451e]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@844427175</td>   <td></td> </tr>
+<tr bgcolor="6eb2ec">  <td>19/12/17 11:46:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AndroidNativeParallelTests.setup(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@59f99ea]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@657106843</td>   <td></td> </tr>
+<tr bgcolor="6eb2ec">  <td>19/12/17 11:46:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AndroidNativeParallelTests.setup(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@675d3402]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1507571825</td>   <td></td> </tr>
+<tr bgcolor="6eb2ec">  <td>19/12/17 11:46:18</td>   <td>1480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AndroidNativeParallelTests.testLoginAndLogout()[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@59f99ea]">testLoginAndLogout</td> 
+  <td>TestNG-tests-2@657106843</td>   <td></td> </tr>
+<tr bgcolor="6eb2ec">  <td>19/12/17 11:46:18</td>   <td>1483</td> <td>&nbsp;</td><td title="&lt;&lt;AndroidNativeParallelTests.teardown()[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@59f99ea]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@657106843</td>   <td></td> </tr>
+<tr bgcolor="6eb2ec">  <td>19/12/17 11:46:31</td>   <td>14618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AndroidNativeParallelTests.testLoginAndLogout()[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@675d3402]">testLoginAndLogout</td> 
+  <td>TestNG-tests-1@1507571825</td>   <td></td> </tr>
+<tr bgcolor="6eb2ec">  <td>19/12/17 12:39:16</td>   <td>3179957</td> <td>&nbsp;</td><td title="&lt;&lt;AndroidNativeParallelTests.teardown()[pri:0, instance:pages.prl.tests.AndroidNativeParallelTests@675d3402]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1507571825</td>   <td></td> </tr>
 </table>
